--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-/* Reinicialización básica (MUI ya hace mucho de esto, pero no está de más) */
 * {
   box-sizing: border-box;
 }
@@ -9,13 +8,9 @@ html, body {
 
 body {
   margin: 0;
-  line-height: 1; /* MUI suele tener su propio line-height, esto puede sobreescribirlo */
+  line-height: 1; 
   color: #111;
   background: #fff;
-  /* La clase is-preload que venía del HTML5 UP. La gestionará React en App.js */
-  /* body.is-preload #page-wrapper { opacity: 0; transform: translateY(1em); } */
-  /* body.is-preload #banner { opacity: 0; transform: translateY(1em); } */
-  /* etc. */
 }
 
 a {
@@ -23,14 +18,12 @@ a {
   text-decoration: none;
 }
 
-/* Muy importante para que las imágenes se adapten y no desborden */
 img, svg {
   display: block;
   max-width: 100%;
   height: auto;
 }
 
-/* Animación de fondo del banner */
 @keyframes moveBackground {
   from { background-position-x: 10000%; }
   to   { background-position-x: -10141%; }
@@ -38,15 +31,8 @@ img, svg {
 
 
 
-/* Estilos de los elementos dentro del Banner */
-#banner .logo  { transition: opacity 2s ease, transform 1s ease; transform: translateY(0); opacity: 1; margin: 0 auto; } /* margin auto para centrar si es bloque */
+#banner .logo  { transition: opacity 2s ease, transform 1s ease; transform: translateY(0); opacity: 1; margin: 0 auto; }
 
-
-/* BORRAR COMPLETAMENTE ESTOS ESTILOS DEL CSS GLOBAL */
-/* #one > div { ... } */
-/* #one > div > div.image.MuiBox-root.css-qs5o7y { ... } */
-/* #one > div > div.content.MuiBox-root.css-1yh0cuh { ... } */
-/* ESTOS ESTILOS DEBEN IR DENTRO DEL COMPONENTE SPOTLIGHT USANDO EL PROP `sx` */
 
 h4 {
  font-family: 'Raleway', 'Helvetica', 'sans-serif' !important;
